Adding initial markdown instructions from a previous gist